2001-09-01  Darin Adler  <darin@bentspoon.com>

	* idl/.cvsignore: Remove this now that this directory is empty.
	* libgnomevfs/.cvsignore: No need to ignore metafile-related
	generated files since those files are gone.
	* libgnomevfs/Makefile.am: Remove more code that was part of
	the metafile support.
	
	* libgnomevfs/eel-cut-n-paste.c:
	* libgnomevfs/eel-cut-n-paste.h:
	* libgnomevfs/stolen-glib-extensions.c:
	* libgnomevfs/stolen-glib-extensions.h:
	Removed.

2001-09-01  Maciej Stachowiak  <mjs@noisehavoc.org>

	* OUTSTANDING_API_ISSUES: Updated.

2001-09-01  Maciej Stachowiak  <mjs@noisehavoc.org>

	* Makefile.am:
	* configure.in:
	* idl/Makefile.am:
	* idl/gnome-vfs-metafile-server.idl:
	* libgnomevfs/Makefile.am:
	* libgnomevfs/gnome-vfs-metadata.c:
	* libgnomevfs/gnome-vfs-metadata.h:
	* libgnomevfs/gnome-vfs-metafile-backend.c:
	* libgnomevfs/gnome-vfs-metafile-backend.h:
	* libgnomevfs/gnome-vfs-metafile-factory.c:
	* libgnomevfs/gnome-vfs-metafile-factory.h:
	Remove metadata code from HEAD, with Seth's approval.

2001-08-31  Darin Adler  <darin@bentspoon.com>

	* libgnomevfs/Makefile.am:
	* libgnomevfs/fnmatch.c:
	* libgnomevfs/fnmatch.h:
	Remove this unused code.

	* libgnomevfs/eel-cut-n-paste.c:
	* libgnomevfs/gnome-vfs-application-registry.c:
	(strip_trailing_whitespace):
	* libgnomevfs/gnome-vfs-configuration.c: (parse_line):
	* libgnomevfs/gnome-vfs-helpers.c:
	* libgnomevfs/gnome-vfs-i18n.c:
	* libgnomevfs/gnome-vfs-mime-info.c:
	* libgnomevfs/gnome-vfs-mime-magic.c: (read_string_val),
	(read_num_val), (eat_white_space), (gnome_vfs_mime_magic_parse),
	(print_escaped_string), (gnome_vfs_sniff_buffer_looks_like_text):
	* libgnomevfs/gnome-vfs-mime.c: (add_to_key),
	(mime_fill_from_file):
	* libgnomevfs/gnome-vfs-mime.h:
	* libgnomevfs/gnome-vfs-private-utils.c: (check_end):
	* libgnomevfs/gnome-vfs-uri.c: (split_toplevel_uri):
	* libgnomevfs/gnome-vfs-utils.c:
	* libgnomevfs/stolen-glib-extensions.c:
	* modules/cdda-cddb.c: (ChopWhite):